tests/machine/x/c/dataset_sort_take_limit.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/dataset_sort_take_limit.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/dataset_sort_take_limit.c:34:25: warning: implicit declaration of function ‘product_list_t_create’ [-Wimplicit-function-declaration]
   34 |   product_list_t tmp2 = product_list_t_create(products.len);
      |                         ^~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/dataset_sort_take_limit.c:34:25: error: invalid initializer

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:48Z
