tests/machine/x/c/dataset_sort_take_limit.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T02:49:27Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  char *name;
  int price;
} product_t;
typedef struct {
  int len;
  product_t *data;
} product_list_t;
static product_list_t create_product_list(int len) {
  product_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(product_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  product_t tmp1_data[] = {(product_t){.name = "Laptop", .price = 1500},
                           (product_t){.name = "Smartphone", .price = 900},
                           (product_t){.name = "Tablet", .price = 600},
                           (product_t){.name = "Monitor", .price = 300},
                           (product_t){.name = "Keyboard", .price = 100},
                           (product_t){.name = "Mouse", .price = 50},
                           (product_t){.name = "Headphones", .price = 200}};
  product_list_t tmp1 = {7, tmp1_data};
  product_list_t products = tmp1;
  product_list_t tmp2 = product_list_t_create(products.len);
  int *tmp5 = (int *)malloc(sizeof(int) * products.len);
  int tmp3 = 0;
  int tmp6 = 1;
  int tmp7 = 3;
  int tmp8 = 0;
  for (int tmp4 = 0; tmp4 < products.len; tmp4++) {
    product_t p = products.data[tmp4];
    if (tmp8 < tmp6) {
      tmp8++;
      continue;
    }
    if (tmp7 >= 0 && tmp3 >= tmp7) {
      break;
    }
    tmp8++;
    tmp2.data[tmp3] = p;
    tmp5[tmp3] = (-p.price);
    tmp3++;
  }
  tmp2.len = tmp3;
  for (int i11 = 0; i11 < tmp3 - 1; i11++) {
    for (int i12 = i11 + 1; i12 < tmp3; i12++) {
      if (tmp5[i11] > tmp5[i12]) {
        int tmp9 = tmp5[i11];
        tmp5[i11] = tmp5[i12];
        tmp5[i12] = tmp9;
        product_t tmp10 = tmp2.data[i11];
        tmp2.data[i11] = tmp2.data[i12];
        tmp2.data[i12] = tmp10;
      }
    }
  }
  product_list_t expensive = tmp2;
  {
    int first = 1;
    if (!first && strlen("--- Top products (excluding most expensive) ---") > 0)
      printf(" ");
    if (strlen("--- Top products (excluding most expensive) ---") > 0)
      printf("%s", "--- Top products (excluding most expensive) ---");
    if (strlen("--- Top products (excluding most expensive) ---") > 0)
      first = 0;
    printf("\n");
  }
  for (int tmp13 = 0; tmp13 < expensive.len; tmp13++) {
    product_t item = expensive.data[tmp13];
    {
      int first = 1;
      if (!first && strlen(item.name) > 0)
        printf(" ");
      if (strlen(item.name) > 0)
        printf("%s", item.name);
      if (strlen(item.name) > 0)
        first = 0;
      if (!first && strlen("costs $") > 0)
        printf(" ");
      if (strlen("costs $") > 0)
        printf("%s", "costs $");
      if (strlen("costs $") > 0)
        first = 0;
      if (!first)
        printf(" ");
      printf("%d", item.price);
      first = 0;
      printf("\n");
    }
  }
  free(tmp2.data);
  return 0;
}
